{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 40,
  "lineage": "fb1aa2b8-cd13-4fd7-feee-621f86a8f4a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043f917a71fe26eed",
            "association_id": "eipassoc-077aa9b57d2805d42",
            "domain": "vpc",
            "id": "eipalloc-043f917a71fe26eed",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06972a673360b69a6",
            "private_dns": "ip-172-20-1-182.ec2.internal",
            "private_ip": "172.20.1.182",
            "public_dns": "ec2-54-237-50-50.compute-1.amazonaws.com",
            "public_ip": "54.237.50.50",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.three_tier_igw",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastian1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b8917ae86a424c9",
            "arn": "arn:aws:ec2:us-east-1:613275946341:instance/i-0b30af7c48b2f3f09",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b30af7c48b2f3f09",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07a9466b599a310fa",
            "private_dns": "ip-172-20-1-102.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.102",
            "public_dns": "ec2-54-209-182-128.compute-1.amazonaws.com",
            "public_ip": "54.209.182.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a14b4d66b24327fa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4f80b88155fe287",
            "tags": {
              "Name": "My Public Instance 1"
            },
            "tags_all": {
              "Name": "My Public Instance 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6037f386dbf40fb"
            ]
          },
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastian2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b8917ae86a424c9",
            "arn": "arn:aws:ec2:us-east-1:613275946341:instance/i-02043b7a1a3fd9524",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02043b7a1a3fd9524",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0965d684240c8ad7c",
            "private_dns": "ip-172-20-2-155.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.2.155",
            "public_dns": "ec2-54-144-9-0.compute-1.amazonaws.com",
            "public_ip": "54.144.9.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f619eb424ceed12",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f789d603acc5b5d",
            "tags": {
              "Name": "My Public Instance 2"
            },
            "tags_all": {
              "Name": "My Public Instance 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6037f386dbf40fb"
            ]
          },
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_subnet.public-subnet-2",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastian3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b8917ae86a424c9",
            "arn": "arn:aws:ec2:us-east-1:613275946341:instance/i-087d9abddd17a17e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087d9abddd17a17e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c8128f45aee6ca42",
            "private_dns": "ip-172-20-3-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.3.195",
            "public_dns": "ec2-3-238-36-23.compute-1.amazonaws.com",
            "public_ip": "3.238.36.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c8ed492f6786e217",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03beb8664c02f21ce",
            "tags": {
              "Name": "My Public Instance 3"
            },
            "tags_all": {
              "Name": "My Public Instance 3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6037f386dbf40fb"
            ]
          },
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_subnet.public-subnet-3",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three_tier_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:internet-gateway/igw-03599c1330f970d06",
            "id": "igw-03599c1330f970d06",
            "owner_id": "613275946341",
            "tags": {
              "Name": "Three tier app igw"
            },
            "tags_all": {
              "Name": "Three tier app igw"
            },
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "three_tier_nat_gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043f917a71fe26eed",
            "association_id": "eipassoc-077aa9b57d2805d42",
            "connectivity_type": "public",
            "id": "nat-0bd03fbe931a58e01",
            "network_interface_id": "eni-06972a673360b69a6",
            "private_ip": "172.20.1.182",
            "public_ip": "54.237.50.50",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b4f80b88155fe287",
            "tags": {
              "Name": "gw NAT1"
            },
            "tags_all": {
              "Name": "gw NAT1"
            }
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.three_tier_igw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:route-table/rtb-065cb189e2e8b56c5",
            "id": "rtb-065cb189e2e8b56c5",
            "owner_id": "613275946341",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bd03fbe931a58e01",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private app route table"
            },
            "tags_all": {
              "Name": "Private app route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.three_tier_igw",
            "aws_nat_gateway.three_tier_nat_gw1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:route-table/rtb-0dc5ce1572ccc8be1",
            "id": "rtb-0dc5ce1572ccc8be1",
            "owner_id": "613275946341",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bd03fbe931a58e01",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private db route table"
            },
            "tags_all": {
              "Name": "private db route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.three_tier_igw",
            "aws_nat_gateway.three_tier_nat_gw1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:route-table/rtb-00ce4c92e2f58d402",
            "id": "rtb-00ce4c92e2f58d402",
            "owner_id": "613275946341",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03599c1330f970d06",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Web Route Table"
            },
            "tags_all": {
              "Name": "Public Web Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.three_tier_igw",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-subnet-1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef1eb3823d239b12",
            "route_table_id": "rtb-065cb189e2e8b56c5",
            "subnet_id": "subnet-007791963faf0f8e8"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.three_tier_igw",
            "aws_nat_gateway.three_tier_nat_gw1",
            "aws_route_table.private_app_rt",
            "aws_subnet.app-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-subnet-2-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bb9ef3ea65a4e38",
            "route_table_id": "rtb-065cb189e2e8b56c5",
            "subnet_id": "subnet-0c1fcd167db598bf3"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.three_tier_igw",
            "aws_nat_gateway.three_tier_nat_gw1",
            "aws_route_table.private_app_rt",
            "aws_subnet.app-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-subnet-3-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011b129a09138f231",
            "route_table_id": "rtb-065cb189e2e8b56c5",
            "subnet_id": "subnet-02d857c5ee9fe121e"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.three_tier_igw",
            "aws_nat_gateway.three_tier_nat_gw1",
            "aws_route_table.private_app_rt",
            "aws_subnet.app-subnet-3",
            "aws_subnet.public-subnet-1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-subnet-1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08105dba655ef9381",
            "route_table_id": "rtb-0dc5ce1572ccc8be1",
            "subnet_id": "subnet-01927387eb704672a"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.three_tier_igw",
            "aws_nat_gateway.three_tier_nat_gw1",
            "aws_route_table.private_db_rt",
            "aws_subnet.db-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-subnet-2-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0656a76fd827846ff",
            "route_table_id": "rtb-0dc5ce1572ccc8be1",
            "subnet_id": "subnet-05c9e862c6384417d"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.three_tier_igw",
            "aws_nat_gateway.three_tier_nat_gw1",
            "aws_route_table.private_db_rt",
            "aws_subnet.db-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-subnet-3-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0178a22472e7134d5",
            "route_table_id": "rtb-0dc5ce1572ccc8be1",
            "subnet_id": "subnet-0222f4492cf66352a"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.three_tier_igw",
            "aws_nat_gateway.three_tier_nat_gw1",
            "aws_route_table.private_db_rt",
            "aws_subnet.db-subnet-3",
            "aws_subnet.public-subnet-1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7ee6f0f830a1b49",
            "route_table_id": "rtb-00ce4c92e2f58d402",
            "subnet_id": "subnet-0b4f80b88155fe287"
          },
          "dependencies": [
            "aws_internet_gateway.three_tier_igw",
            "aws_route_table.public_web_rt",
            "aws_subnet.public-subnet-1",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bc257e16ef97d37",
            "route_table_id": "rtb-00ce4c92e2f58d402",
            "subnet_id": "subnet-00f789d603acc5b5d"
          },
          "dependencies": [
            "aws_internet_gateway.three_tier_igw",
            "aws_route_table.public_web_rt",
            "aws_subnet.public-subnet-2",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-3-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0592d69bb034e832c",
            "route_table_id": "rtb-00ce4c92e2f58d402",
            "subnet_id": "subnet-03beb8664c02f21ce"
          },
          "dependencies": [
            "aws_internet_gateway.three_tier_igw",
            "aws_route_table.public_web_rt",
            "aws_subnet.public-subnet-3",
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:security-group/sg-0e6037f386dbf40fb",
            "description": "Enable http/https access on port 80/443 via ALB and ssh via ssh sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6037f386dbf40fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web-sg",
            "name_prefix": "",
            "owner_id": "613275946341",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Security group"
            },
            "tags_all": {
              "Name": "Web Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:subnet/subnet-007791963faf0f8e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007791963faf0f8e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613275946341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App Subnet 1"
            },
            "tags_all": {
              "Name": "App Subnet 1"
            },
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:subnet/subnet-0c1fcd167db598bf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1fcd167db598bf3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613275946341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App Subnet 2"
            },
            "tags_all": {
              "Name": "App Subnet 2"
            },
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:subnet/subnet-02d857c5ee9fe121e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d857c5ee9fe121e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613275946341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App Subnet 3"
            },
            "tags_all": {
              "Name": "App Subnet 3"
            },
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:subnet/subnet-01927387eb704672a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01927387eb704672a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613275946341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Db Subnet 1"
            },
            "tags_all": {
              "Name": "Db Subnet 1"
            },
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:subnet/subnet-05c9e862c6384417d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c9e862c6384417d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613275946341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Db Subnet 2"
            },
            "tags_all": {
              "Name": "Db Subnet 2"
            },
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:subnet/subnet-0222f4492cf66352a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0222f4492cf66352a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613275946341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Db Subnet 3"
            },
            "tags_all": {
              "Name": "Db Subnet 3"
            },
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:subnet/subnet-0b4f80b88155fe287",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4f80b88155fe287",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "613275946341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web Subnet 1"
            },
            "tags_all": {
              "Name": "Web Subnet 1"
            },
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:subnet/subnet-00f789d603acc5b5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f789d603acc5b5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "613275946341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web Subnet 2"
            },
            "tags_all": {
              "Name": "Web Subnet 2"
            },
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:subnet/subnet-03beb8664c02f21ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03beb8664c02f21ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "613275946341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web Subnet 3"
            },
            "tags_all": {
              "Name": "Web Subnet 3"
            },
            "vpc_id": "vpc-0ecb114d84d5f453e"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three_tier_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613275946341:vpc/vpc-0ecb114d84d5f453e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/20",
            "default_network_acl_id": "acl-0abc43985280aa68f",
            "default_route_table_id": "rtb-06e33d772ff10008e",
            "default_security_group_id": "sg-064bfadca0b12d8fc",
            "dhcp_options_id": "dopt-0b678bb21c64ddb86",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ecb114d84d5f453e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e33d772ff10008e",
            "owner_id": "613275946341",
            "tags": {
              "Name": "VPC for 3_tier on terraform"
            },
            "tags_all": {
              "Name": "VPC for 3_tier on terraform"
            }
          }
        }
      ]
    }
  ]
}